--- a/graphs/pie-graph.html
+++ b/graphs/pie-graph.html
@@ -1,16 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <title>I Do Love Pie!</title>
-    <script type="text/javascript" src="http://www.gstatic.com/charts/loader.js"></script>
-    <script type="text/javascript" src="pie-chart.js"></script>
+    <title>How Do I Spend My Day?</title>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+        google.charts.load('current', {'packages':['corechart']});
+        google.charts.setOnLoadCallback(drawChart);
 
+        function drawChart() {
+            var data = google.visualization.arrayToDataTable([
+                ['Task', 'Hours per Day'],
+                ['Work', 11],
+                ['Nap', 2],
+                ['Eat', 2],
+                ['Watch TV', 2],
+                ['Sleep', 7]
+            ]);
+
+            var options = {
+                title: 'My Daily Activities'
+            };
+
+            var chart = new google.visualization.PieChart(document.getElementById('piechart'));
+
+            chart.draw(data, options);
+        }
+    </script>
 </head>
 
 <body>
-    <div id="Piechart" style="width: 900px; height: 500px"></div>
+    <div id="piechart" style="width: 900px; height: 550px;"></div>
 </body>
 
 </html>
