--- a/color-switch/index.html
+++ b/color-switch/index.html
@@ -3,8 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <script type="text/javascript" src="color-switch.js"></script>
-    <link rel="stylesheet" href="color-switch.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Color Switch – CSS & JS</title>
 </head>
 
@@ -13,6 +12,12 @@
         Credit: The Net Ninja
     -->
     <header>
+        <div class="swatches">
+            <span style="background: #222;"></span>
+            <span style="background: #f76262;"></span>
+            <span style="background: #3e84da;"></span>
+            <span style="background: #ebb332;"></span>
+        </div>
         <nav class="main-nav">
             <ul>
                 <li><a href="">Home</a></li>
@@ -75,6 +80,7 @@
             </div>
         </div>
     </footer>
+    <script type="text/javascript" src="swatches.js"></script>
 </body>
 
 </html>
